--- a/notebooks/model_training_and_evaluation.ipynb
+++ b/notebooks/model_training_and_evaluation.ipynb
@@ -13,16 +13,13 @@
     "import numpy as np\n",
     "\n",
     "# Modules for machine learning\n",
-    "import lightgbm\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import r2_score\n",
+    "import lightgbm\n",
     "\n",
     "# Import the model\n",
     "from crospint.housing_prices import TwoStepsModel, \\\n",
     "    calibrate_model, train_calibration_model\n",
-    "\n",
-    "# Configuration S3\n",
-    "from utils import conf_s3\n",
     "\n",
     "# Import plotting functions\n",
     "from plotnine import *\n",
@@ -32,17 +29,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b7a96ec1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def retrieve_data(type_housing_unit):\n",
+    "    assert type_housing_unit in[\"houses\", \"flats\"], \"type_housing_unit must be either 'houses' or 'flats'\"\n",
+    "    df = (\n",
+    "        pl.read_parquet(\n",
+    "            f\"https://minio.lab.sspcloud.fr/oliviermeslin/diffusion/DVF/transaction_data_{type_housing_unit}_open_data.parquet\"\n",
+    "        )\n",
+    "    )\n",
+    "    return(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d50c0884",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This cell will need to be adapted when switching to Github\n",
-    "df_transactions = (\n",
-    "    pl.read_parquet(\n",
-    "        \"s3://travail/user-k2kfed/confidentiel/personnel_non_sensible/DVF/transaction_data_flats_open_data.parquet\",\n",
-    "        storage_options = conf_s3.storage_options\n",
-    "    )\n",
-    ")"
+    "\n",
+    "# Download data from S3\n",
+    "df_transactions = retrieve_data(\"houses\")"
    ]
   },
   {
@@ -453,7 +463,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
