--- a/notebooks/outlier_removal_through_CTR.ipynb
+++ b/notebooks/outlier_removal_through_CTR.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d145fd36",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'crospint'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# Modules for modelling\u001b[39;00m\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mensemble\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m RandomForestRegressor\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mcrospint\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m create_model_pipeline\n\u001b[32m     10\u001b[39m \u001b[38;5;66;03m# Measuring execution time\u001b[39;00m\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtime\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'crospint'"
+     ]
+    }
+   ],
    "source": [
     "# Modules for data manipulation\n",
     "import polars as pl\n",
@@ -15,9 +27,6 @@
     "# Modules for modelling\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from crospint import create_model_pipeline\n",
-    "\n",
-    "# Configuration S3\n",
-    "from utils import conf_s3\n",
     "\n",
     "# Measuring execution time\n",
     "import time\n",
@@ -32,17 +41,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6e0adb32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a function to retrieve the data from S3\n",
+    "def retrieve_transaction_data(type_housing_unit):\n",
+    "    assert type_housing_unit in[\"houses\", \"flats\"], \"type_housing_unit must be either 'houses' or 'flats'\"\n",
+    "    df = (\n",
+    "        pl.read_parquet(\n",
+    "            f\"https://minio.lab.sspcloud.fr/oliviermeslin/diffusion/DVF/transaction_data_{type_housing_unit}_open_data.parquet\"\n",
+    "        )\n",
+    "    )\n",
+    "    return(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d50c0884",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This cell will need to be adapted when switching to Github\n",
-    "df_transactions = (\n",
-    "    pl.read_parquet(\n",
-    "        \"s3://travail/user-k2kfed/confidentiel/personnel_non_sensible/DVF/transaction_data_flats_open_data.parquet\",\n",
-    "        storage_options = conf_s3.storage_options\n",
-    "    )\n",
-    ")"
+    "# Download data from S3\n",
+    "df_transactions = retrieve_transaction_data(\"flats\")"
    ]
   },
   {
@@ -52,6 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Show transactions\n",
     "df_transactions.head(10)"
    ]
   },
@@ -66,7 +89,7 @@
     "df_transactions = (\n",
     "    df_transactions\n",
     "    .with_columns(\n",
-    "        log_price_sqm = np.log(c.valeurfonc/c.dsupdc)\n",
+    "        log_price_sqm = np.log(c.transaction_amount/c.floor_area)\n",
     "    )\n",
     ")"
    ]
@@ -82,7 +105,7 @@
     "params = {\n",
     "    \"coord_rotation__coordinates_names\": (\"x\", \"y\"),\n",
     "    \"coord_rotation__number_axis\": 11,\n",
-    "    \"date_conversion__date_name\": \"datemut\",\n",
+    "    \"date_conversion__date_name\": \"transaction_date\",\n",
     "    \"date_conversion__reference_date\": \"2010-01-01\",\n",
     "    \"model__n_estimators\": 120,\n",
     "    \"model__min_samples_split\": 20,\n",
@@ -93,7 +116,7 @@
     "    \"model__oob_score\": True,\n",
     "    \"model__random_state\": 20230516\n",
     "}\n",
-    "model_features = ['dsupdc', 'datemut', 'x', 'y']\n",
+    "model_features = ['floor_area', 'transaction_amount', 'x', 'y', 'seashore_distance']\n",
     "target_variable_name = \"log_price_sqm\""
    ]
   },
@@ -257,7 +280,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
