--- a/notebooks/outlier_removal_through_CTR.ipynb
+++ b/notebooks/outlier_removal_through_CTR.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d145fd36",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'crospint'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# Modules for modelling\u001b[39;00m\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mensemble\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m RandomForestRegressor\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mcrospint\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m create_model_pipeline\n\u001b[32m     10\u001b[39m \u001b[38;5;66;03m# Measuring execution time\u001b[39;00m\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtime\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'crospint'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Modules for data manipulation\n",
     "import polars as pl\n",
@@ -97,6 +85,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "99123ad3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_transactions.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d5658221",
    "metadata": {},
    "outputs": [],
@@ -107,7 +105,7 @@
     "    \"coord_rotation__number_axis\": 11,\n",
     "    \"date_conversion__date_name\": \"transaction_date\",\n",
     "    \"date_conversion__reference_date\": \"2010-01-01\",\n",
-    "    \"model__n_estimators\": 120,\n",
+    "    \"model__n_estimators\": 50,\n",
     "    \"model__min_samples_split\": 20,\n",
     "    \"model__min_samples_leaf\": 10,\n",
     "    \"model__n_jobs\": -1,\n",
@@ -116,7 +114,7 @@
     "    \"model__oob_score\": True,\n",
     "    \"model__random_state\": 20230516\n",
     "}\n",
-    "model_features = ['floor_area', 'transaction_amount', 'x', 'y', 'seashore_distance']\n",
+    "model_features = ['floor_area', 'transaction_date', 'x', 'y', 'seashore_distance']\n",
     "target_variable_name = \"log_price_sqm\""
    ]
   },
@@ -280,7 +278,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
