--- a/notebooks/model_training_and_evaluation.ipynb
+++ b/notebooks/model_training_and_evaluation.ipynb
@@ -3,6 +3,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "730abb81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install uv for dependency management\n",
+    "!pip install uv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62892567",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install dependencies\n",
+    "!uv pip install -r pyproject.toml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d145fd36",
    "metadata": {},
    "outputs": [],
@@ -464,7 +486,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
