--- a/notebooks/outlier_removal_through_CTR.ipynb
+++ b/notebooks/outlier_removal_through_CTR.ipynb
@@ -3,6 +3,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "785a2469",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install uv for dependency management\n",
+    "!pip install uv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95d0c95b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install dependencies\n",
+    "!uv pip install -r pyproject.toml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d145fd36",
    "metadata": {},
    "outputs": [],
