--- a/notebooks/model_training_and_evaluation.ipynb
+++ b/notebooks/model_training_and_evaluation.ipynb
@@ -7,17 +7,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# =========================\n",
+    "# Environment Setup\n",
+    "# =========================\n",
+    "\n",
     "# Install uv for dependency management\n",
-    "!pip install uv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62892567",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "!pip install -q uv\n",
+    "# Retrieve the list of dependencies\n",
+    "!wget https://raw.githubusercontent.com/USERNAME/REPO/main/pyproject.toml\n",
     "# Install dependencies\n",
     "!uv pip install -r pyproject.toml"
    ]
@@ -29,6 +26,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# =========================\n",
+    "# The notebook starts here\n",
+    "# =========================\n",
+    "\n",
     "# Modules for data manipulation\n",
     "import polars as pl\n",
     "from polars import col as c\n",
