--- a/notebooks/model_training_and_evaluation.ipynb
+++ b/notebooks/model_training_and_evaluation.ipynb
@@ -16,7 +16,9 @@
     "# Retrieve the list of dependencies\n",
     "!wget https://raw.githubusercontent.com/oliviermeslin/crospint/main/pyproject.toml\n",
     "# Install dependencies\n",
-    "!uv pip install -r pyproject.toml"
+    "!uv pip install -r pyproject.toml\n",
+    "# Install crospint\n",
+    "!uv pip install crospint"
    ]
   },
   {
