--- a/notebooks/model_training_and_evaluation.ipynb
+++ b/notebooks/model_training_and_evaluation.ipynb
@@ -290,9 +290,9 @@
    "source": [
     "# Compute metrics on predictive power\n",
     "r2_raw = r2_score(np.log(test2[\"transaction_amount\"]), np.log(test2[\"raw_prediction\"] / np.exp(price_model.RMSE**2 / 2)))\n",
-    "share_below20_raw = test2.filter((c.raw_prediction / c.valeurfonc - 1).abs() < 0.2).shape[0] / test.shape[0]\n",
+    "share_below20_raw = test2.filter((c.raw_prediction / c.transaction_amount - 1).abs() < 0.2).shape[0] / test.shape[0]\n",
     "r2_cal = r2_score(np.log(test2[\"transaction_amount\"]), np.log(test2[\"cal_prediction\"]))\n",
-    "share_below20_cal = test2.filter((c.cal_prediction / c.valeurfonc - 1).abs() < 0.2).shape[0] / test.shape[0]\n",
+    "share_below20_cal = test2.filter((c.cal_prediction / c.transaction_amount - 1).abs() < 0.2).shape[0] / test.shape[0]\n",
     "print(f\"The R² of the model with Miller's correction is {r2_raw: .3f}; {share_below20_raw: .1%} of observations are predicted with an absolute error of less than 20%.\")\n",
     "print(f\"The R² of the calibrated model is {r2_cal: .3f}; {share_below20_cal: .1%} of observations are predicted with an absolute error of less than 20%.\")"
    ]
@@ -339,9 +339,7 @@
     "    .with_columns(\n",
     "        model_label = pl.when(c.variable==\"ratio_raw\").then(pl.lit(\"Model with Miller's correction\")).otherwise(pl.lit(\"Calibrated model\"))\n",
     "    )\n",
-    ")\n",
-    "\n",
-    "print(quantiles)"
+    ")"
    ]
   },
   {
