--- a/notebooks/outlier_removal_through_CTR.ipynb
+++ b/notebooks/outlier_removal_through_CTR.ipynb
@@ -22,6 +22,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3f921cf3",
+   "metadata": {},
+   "source": [
+    "## What is this notebook about?\n",
+    "\n",
+    "This notebook illustrates the _conditional tail removal_ procedure defined in [Meslin, 2026]. \n",
+    "\n",
+    "⚠️⚠️⚠️\n",
+    "This notebook is computationally intensive. Read the section on \"How to use this notebook\" before running the code.  \n",
+    "⚠️⚠️⚠️\n",
+    "\n",
+    "### The CTR procedure\n",
+    "\n",
+    "The CTR procedure has four steps:\n",
+    "\n",
+    "- A random forest is trained to predict the (log) price per square meter $p_{it}$. This model writes: $p_{it} = h\\left(g\\left(x_{i}, y_{i}\\right), d_i, t, S_i\\right)$ with $p_{it}$ the log-price per square meter, $x_i, y_i$ the coordinates of housing unit $i$, $d_i$ the shortest distance to the sea, $t$ the transaction date and $S_i$ the floor area of the housing unit. Coordinate rotation $g$ is applied to coordinates before training the model.\n",
+    "- Once the random forest is trained, residuals are computed for all transactions as the difference between the (log) price per square meter and the model out-of-bag prediction: $\\epsilon_{it} = p_{it} - \\hat{h}^{\\text{OOB}}\\left(g\\left(x_{i}, y_{i}\\right), d_i, t, S_i\\right)$\n",
+    "- Statistical tests are conducted to determine which distribution of reference best fits the distribution of residuals. In the present case, the distribution residuals matches closely an asymmetric Laplace distribution.\n",
+    "- Comparing the score distribution with the distribution of reference using a quantile-quantile plot allows identifying thresholds where the tails of the score distribution start to diverge from the reference distribution.\n",
+    "\n",
+    "### How to use this notebook\n",
+    "\n",
+    "In this notebook, the model hyperparameters are set to values compatible with proper outlier detection, but may induce a long training time as training random forest is computationally demanding, and resources on Colab are limited. If you just want to make a quick test, I advise you to adjust the hyperparameters so that training is much faster:\n",
+    "\n",
+    "- Reduce `model__n_estimators` to 40;\n",
+    "- Increase `model__min_samples_split` to 200;\n",
+    "- Increase `model__min_samples_leaf` to 200."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d145fd36",
@@ -129,7 +160,7 @@
     "    \"coord_rotation__number_axis\": 11,\n",
     "    \"date_conversion__date_name\": \"transaction_date\",\n",
     "    \"date_conversion__reference_date\": \"2010-01-01\",\n",
-    "    \"model__n_estimators\": 45,\n",
+    "    \"model__n_estimators\": 120,\n",
     "    \"model__min_samples_split\": 20,\n",
     "    \"model__min_samples_leaf\": 10,\n",
     "    \"model__n_jobs\": -1,\n",
