--- a/notebooks/outlier_removal_through_CTR.ipynb
+++ b/notebooks/outlier_removal_through_CTR.ipynb
@@ -39,7 +39,7 @@
     "The CTR procedure has four steps:\n",
     "\n",
     "- A random forest is trained to predict the (log) price per square meter $p_{it}$. This model writes: $p_{it} = h\\left(g\\left(x_{i}, y_{i}\\right), d_i, t, S_i\\right)$ with $p_{it}$ the log-price per square meter, $x_i, y_i$ the coordinates of housing unit $i$, $d_i$ the shortest distance to the sea, $t$ the transaction date and $S_i$ the floor area of the housing unit. Coordinate rotation $g$ is applied to coordinates before training the model.\n",
-    "- Once the random forest is trained, residuals are computed for all transactions as the difference between the (log) price per square meter and the model out-of-bag prediction: $\\epsilon_{it} = p_{it} - \\hat{h}^{\\text{OOB}}\\left(g\\left(x_{i}, y_{i}\\right), d_i, t, S_i\\right)$\n",
+    "- Once the random forest is trained, residuals are computed for all transactions as the difference between the (log) price per square meter and the model out-of-bag prediction: $\\hat{\\epsilon}_{it} = p_{it} - \\hat{h}^{\\text{OOB}}\\left(g\\left(x_{i}, y_{i}\\right), d_i, t, S_i\\right)$\n",
     "- Statistical tests are conducted to determine which distribution of reference best fits the distribution of residuals. In the present case, the distribution residuals matches closely an asymmetric Laplace distribution.\n",
     "- Comparing the score distribution with the distribution of reference using a quantile-quantile plot allows identifying thresholds where the tails of the score distribution start to diverge from the reference distribution.\n",
     "\n",
@@ -49,7 +49,9 @@
     "\n",
     "- Reduce `model__n_estimators` to 40;\n",
     "- Increase `model__min_samples_split` to 200;\n",
-    "- Increase `model__min_samples_leaf` to 200."
+    "- Increase `model__min_samples_leaf` to 200.\n",
+    "\n",
+    "At some point, you can use data on `houses` or `flats`. Modify the line `df_transactions = retrieve_transaction_data(\"flats\")` depending on what you want to look at.\n"
    ]
   },
   {
